@@ -144,6 +144,16 @@
                  a directory containing your own customized versions of this sylesheets.
                  </td>
             </tr>
+            <tr>
+                <td>-user <i>&nbsp;user&nbsp;id</i></td>
+                <td>No</td>
+                <td>Sets a user for the JMX HTTP Adapter. This will require users to login with this user (and password see below) to use the JMX Web interface.<i>The -password flag must also be set</i></td>
+            </tr>
+            <tr class="oddrow">
+                <td>-password <i>password</i></td>
+                <td>No</td>
+                <td>Sets a password for the JMX HTTP Adapter. This will require users to login to use the JMX Web interface.<i>The -user flag must also be set</i></td>
+            </tr>
             <tr class="oddrow">
                 <td>-debug</td>
                 <td>No</td>
